--- a/webview-ui/src/i18n/locales/hi/settings.json
+++ b/webview-ui/src/i18n/locales/hi/settings.json
@@ -31,7 +31,20 @@
 		"prompts": "प्रॉम्प्ट्स",
 		"experimental": "प्रायोगिक",
 		"language": "भाषा",
-		"about": "परिचय"
+		"about": "परिचय",
+		"editingType": "संपादन प्रकार",
+		"diffSettings": "अंतर सेटिंग्स",
+		"diffViewAutoFocusBehavior": "डिफ व्यू ऑटो फोकस",
+		"fileEditing": "फ़ाइल संपादन"
+	},
+	"editingType": {
+		"description": "अपना पसंदीदा संपादन वर्कफ़्लो चुनें।"
+	},
+	"diffSettings": {
+		"description": "संपादन के दौरान अंतर कैसे लागू किए जाते हैं, इसे कॉन्फ़िगर करें।"
+	},
+	"diffViewAutoFocusBehavior": {
+		"description": "परिवर्तन दिखाते समय डिफ व्यू कैसे व्यवहार करता है, इसे नियंत्रित करें।"
 	},
 	"prompts": {
 		"description": "प्रॉम्प्ट्स को बेहतर बनाना, कोड की व्याख्या करना और समस्याओं को ठीक करना जैसी त्वरित कार्रवाइयों के लिए उपयोग किए जाने वाले सहायक प्रॉम्प्ट्स को कॉन्फ़िगर करें। ये प्रॉम्प्ट्स Roo को सामान्य विकास कार्यों के लिए बेहतर सहायता प्रदान करने में मदद करते हैं।"
@@ -511,7 +524,23 @@
 			"autoCloseAll": {
 				"label": "Roo द्वारा छुए गए सभी टैब स्वचालित रूप से बंद करें",
 				"description": "जब सक्षम किया जाता है (और उपरोक्त सेटिंग भी सक्षम है), तो Roo उन सभी टैब को स्वचालित रूप से बंद कर देगा जिनके साथ इसने फ़ाइल संशोधन कार्य के दौरान इंटरैक्ट किया था, जिसमें वे टैब भी शामिल हैं जो कार्य शुरू होने से पहले ही खुले थे।"
-			}
+			},
+			"disabledNotice": "अंतर-आधारित संपादन वर्तमान में अक्षम है।"
+		},
+		"fileEditing": {
+			"fileBasedEditing": {
+				"label": "फ़ाइल सिस्टम-आधारित संपादन सक्षम करें",
+				"description": "जब सक्षम होता है, तो Roo डिफ व्यू का उपयोग करने के बजाय सीधे फ़ाइल सिस्टम में फ़ाइलों को संपादित करेगा। यह सभी अन्य संपादन व्यवहार टॉगल को अक्षम कर देता है ताकि एक सरल और अधिक प्रत्यक्ष संपादन अनुभव प्रदान किया जा सके।"
+			},
+			"correctTabGroup": {
+				"label": "सही टैब समूह में टैब खोलें",
+				"description": "जब सक्षम होता है, नए टैब उस टैब समूह में खुलेंगे जिसमें Roo Code इंस्टेंस है जिसने कार्य उत्पन्न किया।"
+			},
+			"endOfTabList": {
+				"label": "टैब सूची के अंत में टैब खोलें",
+				"description": "जब सक्षम होता है, नए टैब वर्तमान में सक्रिय टैब के बगल में नहीं बल्कि टैब सूची के अंत में खुलेंगे।"
+			},
+			"exclusivityNotice": "फ़ाइल-आधारित संपादन मोड सक्षम है। एक सुसंगत अनुभव सुनिश्चित करने के लिए सभी अन्य संपादन व्यवहार टॉगल अक्षम कर दिए गए हैं।"
 		}
 	},
 	"experimental": {
