--- a/webview-ui/src/i18n/locales/ru/settings.json
+++ b/webview-ui/src/i18n/locales/ru/settings.json
@@ -31,10 +31,23 @@
 		"prompts": "Промпты",
 		"experimental": "Экспериментальное",
 		"language": "Язык",
-		"about": "О Roo Code"
+		"about": "О Roo Code",
+		"editingType": "Тип редактирования",
+		"diffSettings": "Настройки diff",
+		"diffViewAutoFocusBehavior": "Авто-фокус просмотра diff",
+		"fileEditing": "Редактирование файлов"
 	},
 	"prompts": {
 		"description": "Настройте промпты поддержки, используемые для быстрых действий, таких как улучшение промптов, объяснение кода и исправление проблем. Эти промпты помогают Roo обеспечить лучшую поддержку для общих задач разработки."
+	},
+	"editingType": {
+		"description": "Выберите предпочитаемый рабочий процесс редактирования."
+	},
+	"diffSettings": {
+		"description": "Настройте, как применяются диффы при редактировании."
+	},
+	"diffViewAutoFocusBehavior": {
+		"description": "Контролируйте поведение просмотра диффов при показе изменений."
 	},
 	"codeIndex": {
 		"title": "Индексация кодовой базы",
@@ -511,7 +524,23 @@
 			"autoCloseAll": {
 				"label": "Автоматически закрывать все вкладки, затронутые Roo",
 				"description": "Если включено (и предыдущая настройка также включена), Roo будет автоматически закрывать все вкладки, с которыми он взаимодействовал во время задачи модификации файлов, включая те, которые были открыты до начала задачи."
-			}
+			},
+			"disabledNotice": "Редактирование на основе diff в настоящее время отключено."
+		},
+		"fileEditing": {
+			"fileBasedEditing": {
+				"label": "Включить редактирование на основе файловой системы",
+				"description": "Если включено, Roo будет редактировать файлы непосредственно в файловой системе вместо использования просмотра diff. Это отключает все остальные переключатели поведения редактирования для более простого и прямого опыта редактирования."
+			},
+			"correctTabGroup": {
+				"label": "Открывать вкладки в правильной группе вкладок",
+				"description": "Если включено, новые вкладки будут открываться в группе вкладок, содержащей экземпляр Roo Code, который сгенерировал задачу."
+			},
+			"endOfTabList": {
+				"label": "Открывать вкладки в конце списка вкладок",
+				"description": "Если включено, новые вкладки будут открываться в конце списка вкладок вместо рядом с текущей активной вкладкой."
+			},
+			"exclusivityNotice": "Режим редактирования на основе файлов включен. Все остальные переключатели поведения редактирования отключены для обеспечения согласованного опыта."
 		}
 	},
 	"experimental": {
