--- a/webview-ui/src/i18n/locales/ko/settings.json
+++ b/webview-ui/src/i18n/locales/ko/settings.json
@@ -31,10 +31,23 @@
 		"prompts": "프롬프트",
 		"experimental": "실험적",
 		"language": "언어",
-		"about": "Roo Code 정보"
+		"about": "Roo Code 정보",
+		"editingType": "편집 유형",
+		"diffSettings": "차이점 설정",
+		"diffViewAutoFocusBehavior": "차이점 보기 자동 포커스",
+		"fileEditing": "파일 편집"
 	},
 	"prompts": {
 		"description": "프롬프트 향상, 코드 설명, 문제 해결과 같은 빠른 작업에 사용되는 지원 프롬프트를 구성합니다. 이러한 프롬프트는 Roo가 일반적인 개발 작업에 대해 더 나은 지원을 제공하는 데 도움이 됩니다."
+	},
+	"editingType": {
+		"description": "선호하는 편집 워크플로를 선택하세요."
+	},
+	"diffSettings": {
+		"description": "편집 중 차이점이 적용되는 방식을 구성합니다."
+	},
+	"diffViewAutoFocusBehavior": {
+		"description": "변경 사항을 표시할 때 차이점 보기의 동작을 제어합니다."
 	},
 	"codeIndex": {
 		"title": "코드베이스 인덱싱",
@@ -511,7 +524,23 @@
 			"autoCloseAll": {
 				"label": "Roo가 수정한 모든 탭 자동 닫기",
 				"description": "활성화 시 (그리고 위의 설정도 활성화된 경우), Roo는 파일 수정 작업 중에 상호 작용한 모든 탭(작업 시작 전에 이미 열려 있던 탭 포함)을 자동으로 닫습니다."
-			}
+			},
+			"disabledNotice": "차이점 기반 편집이 현재 비활성화되어 있습니다."
+		},
+		"fileEditing": {
+			"fileBasedEditing": {
+				"label": "파일 시스템 기반 편집 활성화",
+				"description": "활성화하면 Roo는 차이점 보기를 사용하는 대신 파일 시스템에서 직접 파일을 편집합니다. 이렇게 하면 더 간단하고 직접적인 편집 경험을 위해 다른 모든 편집 동작 토글이 비활성화됩니다."
+			},
+			"correctTabGroup": {
+				"label": "올바른 탭 그룹에서 탭 열기",
+				"description": "활성화하면 새 탭이 작업을 생성한 Roo Code 인스턴스가 포함된 탭 그룹에서 열립니다."
+			},
+			"endOfTabList": {
+				"label": "탭 목록 끝에서 탭 열기",
+				"description": "활성화하면 새 탭이 현재 활성 탭 옆이 아닌 탭 목록 끝에서 열립니다."
+			},
+			"exclusivityNotice": "파일 기반 편집 모드가 활성화되었습니다. 일관된 경험을 보장하기 위해 다른 모든 편집 동작 토글이 비활성화되어 있습니다."
 		}
 	},
 	"experimental": {
